adjust migration, seeds and swagger for booking put
